appId: com.hp.impulse.sprocket
---
- runFlow:
    when:
      visible: "Filter"
    commands:
      - tapOn: "Filter"
      - waitForAnimationToEnd:
          timeout: 2000
      - tapOn:
          point: "20%,85%"

- runFlow:
    when:
      visible: "Edit"
    commands:
      - tapOn: "Edit"
      - waitForAnimationToEnd:
          timeout: 2000
