appId: com.hp.impulse.sprocket
name: Filter
---
# Image Filter Application Flow Test
# Dismiss the tutorial overlay
# ) Fine-tune popup (optional)
# ------------------------------
- runFlow:
    when:
      visible: "Time to Fine-Tune"
    commands:
      - runFlow:
          when:
            visible: "Ok"
          commands:
            - tapOn: "Ok"
      - runFlow:
          when:
            visible: "OK"
          commands:
            - tapOn: "OK"
      - waitForAnimationToEnd:
          timeout: 2000
  
# Apply various filters by tapping on them in the carousel
- tapOn:
    id: imageViewFilter
    index: 1
- assertVisible: "Sepia"
- waitForAnimationToEnd:
    timeout: 2000
# Run only if Filter Intensity popup is visible
- runFlow:
    when:
      visible: "Ok"
    commands:
      - tapOn: "Ok"
      - waitForAnimationToEnd:
          timeout: 2000
- tapOn:
    id: imageViewFilter
    index: 2
- assertVisible: "Desaturate"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: imageViewFilter
    index: 3
- assertVisible: "Polaroid"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: imageViewFilter
    index: 4
- assertVisible: "Brownie"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: imageViewFilter
    index: 5
- assertVisible: "Vintage"
- waitForAnimationToEnd:
    timeout: 2000

