appId: com.hp.impulse.sprocket
name: Skip signup – I'll do it later
---
- waitForAnimationToEnd:
    timeout: 2000

- runFlow:
    when:
      visible: "Create an account"
    commands:
      - assertVisible: "I'll do it later"
      - tapOn: "I'll do it later"
      - waitForAnimationToEnd:
          timeout: 2000

- runFlow:
    when:
      visible: "Sign Up"
    commands:
      - assertVisible: "I'll do it later"
      - tapOn: "I'll do it later"
      - waitForAnimationToEnd:
          timeout: 2000
